# ReleasedProjects

./: .gitignore  README.md  create-project.sh  docker-compose.yml  setup-structure.sh  test_trade_update.py
backend/: CMakeLists.txt  pom.xml
backend/java-service/: Dockerfile  pom.xml
backend/java-service/src/main/java/com/trading/pnl/: TradingPnlApplication.java
backend/java-service/src/main/java/com/trading/pnl/config/: SchedulingConfig.java  WebConfig.java  WebSocketChannelConfig.java  WebSocketConfig.java
backend/java-service/src/main/java/com/trading/pnl/controller/: MarketDataController.java  OreController.java  TradeController.java  WebSocketTestController.java
backend/java-service/src/main/java/com/trading/pnl/model/: OreMarketDataItem.java
backend/java-service/src/main/java/com/trading/pnl/service/: OreConversionService.java  OreXmlService.java  TradeMonitorService.java
backend/java-service/src/main/java/com/trading/pnl/util/: TickerMappingUtil.java
backend/java-service/src/main/java/com/trading/pnl/websocket/: WebSocketInterceptor.java  WebSocketSessionManager.java
backend/java-service/src/main/resources/: application.properties
backend/java-service/src/main/resources/config/: ticker_mapping.json
backend/java-service/src/test/java/com/trading/pnl/service/: TradeMonitorServiceTest.java
backend/java-service/src/test/java/com/trading/pnl/websocket/: WebSocketIntegrationTest.java
backend/python-service/: main.py  requirements.txt  structure.txt
backend/python-service/src/routes/: trade_routes.py
backend/python-service/src/services/: trade_monitor.py
backend/src/main/cpp/: CMakeLists.txt  CMakeLists_bak.txt  FXOptionJNI.cpp  com_quantlib_FXOption.h
backend/src/main/java/com/pms/controller/: MarketDataController.java
backend/src/main/java/com/quantlib/: FXOption.java  FXOptionTest.java
backend/src/test/java/com/quantlib/: FXOptionTest.java
frontend/: .gitignore  package-lock.json  package.json
frontend/cypress/e2e/: trade-table.cy.ts
frontend/public/: websocket-test.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: MarketData.tsx  TradeTable.tsx
frontend/src/components/__tests__/: TradeTable.test.tsx
frontend/src/pages/: Ore.tsx  OreBatch.tsx
frontend/src/types/: sockjs-client.d.ts
frontend/src/utils/: global-polyfill.ts
trading-pnl-system/: .gitignore  README.md
